# aws-robomaker-sample-application-helloworld

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  buildspec.yml  entrypoint.sh  github_deploy.pem.enc  roboMakerSettings.json  test.sh
.github/workflows/: lint.yml  ros1.yml  ros2.yml  ros2foxy.yml
robot_ws/: .rosinstall
robot_ws/src/hello_world_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_ws/src/hello_world_robot/deploymentScripts/: post_launch_file.sh  pre_launch_file.sh
robot_ws/src/hello_world_robot/launch/: deploy_rotate.launch  deploy_rotate.launch.py  rotate.launch  rotate.launch.py
robot_ws/src/hello_world_robot/nodes/: rotate  rotate.py
robot_ws/src/hello_world_robot/src/hello_world_robot/: rotate.py
scripts/: install_linters.sh  lint.sh  setup.sh
simulation_ws/: .rosinstall
simulation_ws/src/hello_world_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/hello_world_simulation/launch/: README.md  WF_world.launch  bookstore.launch  empty_world.launch  empty_world.launch.py  empty_world_test.launch  small_house.launch  view_empty_world.launch  worldforge_world.launch  worldforge_world.launch.py
simulation_ws/src/hello_world_simulation/worlds/: empty.world  empty.world.erb
simulation_ws/src/test_node/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/test_node/launch/: test.launch
simulation_ws/src/test_node/nodes/: .~c9_invoke_e8cIPE  run_test
simulation_ws/src/turtlebot3_description_reduced_mesh/: CMakeLists.txt  package.xml
simulation_ws/src/turtlebot3_description_reduced_mesh/launch/: spawn_turtlebot.launch  spawn_turtlebot.launch.py
simulation_ws/src/turtlebot3_description_reduced_mesh/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_for_autorace.gazebo.xacro  turtlebot3_burger_for_autorace.urdf.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro
