<?xml version="1.0"?>
<package format="3">
  <name>hello_world_robot</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker robot package with a rotating Turtlebot3
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>ament</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
