<?xml version="1.0"?>
<package format="2">
  <name>hello_world_robot</name>
  <version>1.4.1</version>
  <description>
    AWS RoboMaker robot package with a rotating Turtlebot3
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>interactive_markers</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_description_reduced_mesh</depend>
  <depend>xacro</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
