<?xml version="1.0"?>
<package format="2">
  <name>hello_world_simulation</name>
  <version>1.4.1</version>
  <description>
    AWS RoboMaker simulation package with a TurtleBot3 in an empty Gazebo world.
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <!-- required to install .rviz model-->
  <depend>turtlebot3_description</depend>
  <exec_depend>gazebo</exec_depend>
</package>
